--- a/pages/pag5/pag5.html
+++ b/pages/pag5/pag5.html
@@ -10,8 +10,7 @@
 	</head>
 	<body>
 		<img id="imatge" src="images/reina.png"/>
-		<a href="https://vimeo.com/411157266" id="linkVideo"> VIDEO! </a>
-
+		<a href="https://vimeo.com/411157266" id="linkVideo"> VIDEO! </a> </br>
 		<input type="text" id="contra" placeholder="Escriu aquí el codi correcte"/> </br>
 		<p id="valid"></p>
 		<p id="invalid"></p>
